# Voitra

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
Docker/: Dockerfile  docker-compose.yml  run.sh
app/: bot.py  proccessing.py
